src/OLED_RGB/capstone.sdk/.metadata/.plugins/org.eclipse.cdt.ui/OLEDrgb.build.log
14:09:25 **** Auto Build of configuration Debug for project OLEDrgb ****
make pre-build main-build 
a9-linaro-pre-build-step
' '
'Building file: ../src/helloworld.c'
'Invoking: ARM v7 gcc compiler'
arm-none-eabi-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/helloworld.o" -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -I../../OLEDrgb_bsp/ps7_cortexa9_0/include -MMD -MP -MF"src/helloworld.d" -MT"src/helloworld.o" -o "src/helloworld.o" "../src/helloworld.c"
../src/helloworld.c: In function 'DemoInitialize':
../src/helloworld.c:56:28: error: 'XPAR_PMODOLEDRGB_0_AXI_LITE_GPIO_BASEADDR' undeclared (first use in this function); did you mean 'XPAR_PS7_DDRC_0_S_AXI_BASEADDR'?
    OLEDrgb_begin(&oledrgb, XPAR_PMODOLEDRGB_0_AXI_LITE_GPIO_BASEADDR,
                            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
                            XPAR_PS7_DDRC_0_S_AXI_BASEADDR
../src/helloworld.c:56:28: note: each undeclared identifier is reported only once for each function it appears in
../src/helloworld.c:57:10: error: 'XPAR_PMODOLEDRGB_0_AXI_LITE_SPI_BASEADDR' undeclared (first use in this function); did you mean 'XPAR_PMODOLEDRGB_0_AXI_LITE_GPIO_BASEADDR'?
          XPAR_PMODOLEDRGB_0_AXI_LITE_SPI_BASEADDR);
          ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
          XPAR_PMODOLEDRGB_0_AXI_LITE_GPIO_BASEADDR
make: *** [src/helloworld.o] Error 1

14:09:26 Build Finished (took 640ms)

